# refua

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/api/: boltz.rst  boltzgen.rst  conf.py  index.rst  refua.rst
docs/boltz/: README.md  api.md  prediction.md  training.md
docs/boltzgen/: PYPI_DESCRIPTION.md  README.md  filter.ipynb
examples/: README.md  antibody_design.py  api_in_memory.py  boltz2_kras_mrtx1133.py  boltz2_official_demo_pair.py  boltz_constraints.py  boltz_multi_pocket_complex.py  boltz_multichain_msa.py  boltzgen_peptide_binder.py  boltzgen_template_insertions.py  boltzgen_template_masks.py  protein_ligand_affinity.py
src/refua/: __init__.py  admet.py  api.py  chem.py  protein.py  unified.py
src/refua/boltz/: __init__.py  api.py  main.py
src/refua/boltz/data/: mol.py
src/refua/boltz/data/crop/: affinity.py  boltz.py  cropper.py
src/refua/boltz/data/feature/: featurizer.py  featurizerv2.py  symmetry.py
src/refua/boltz/data/filter/static/: filter.py  ligand.py  polymer.py
src/refua/boltz/data/module/: inference.py  inferencev2.py  training.py  trainingv2.py
src/refua/boltz/data/msa/: mmseqs2.py
src/refua/boltz/data/parse/: a3m.py  csv.py  fasta.py  mmcif.py  mmcif_with_constraints.py  pdb.py  schema.py  yaml.py
src/refua/boltz/data/sample/: cluster.py  distillation.py  random.py  sampler.py
src/refua/boltz/data/tokenize/: boltz.py  boltz2.py
src/refua/boltz/data/write/: mmcif.py  pdb.py  writer.py
src/refua/boltz/model/: model.py
src/refua/boltz/model/layers/: attention.py  attentionv2.py  confidence_utils.py  outer_product_mean.py  pair_averaging.py  pairformer.py  transition.py  triangular_mult.py
src/refua/boltz/model/layers/triangular_attention/: attention.py  primitives.py  utils.py
src/refua/boltz/model/loss/: confidence.py  confidencev2.py  diffusion.py  diffusionv2.py  validation.py
src/refua/boltz/model/models/: boltz1.py  boltz2.py
src/refua/boltz/model/modules/: affinity.py  confidence.py  confidence_utils.py  confidencev2.py  diffusion.py  diffusion_conditioning.py  diffusionv2.py  encoders.py  encodersv2.py  transformers.py  transformersv2.py  trunk.py  trunkv2.py  utils.py
src/refua/boltz/model/optim/: ema.py
src/refua/boltz/model/potentials/: potentials.py  schedules.py
src/refua/boltzgen/: __init__.py  api.py
src/refua/boltzgen/cli/: boltzgen.py
src/refua/boltzgen/data/: const.py  data.py  mol.py  pad.py  rmsd_computation.py
src/refua/boltzgen/data/crop/: cropper.py  multimer.py
src/refua/boltzgen/data/feature/: featurizer.py
src/refua/boltzgen/data/filter/dynamic/: confidence.py  pdb_id_txtfile.py
src/refua/boltzgen/data/filter/static/: filter.py  ligand.py  polymer.py
src/refua/boltzgen/data/parse/: a3m.py  mmcif.py  pdb_parser.py  schema.py
src/refua/boltzgen/data/sample/: cluster.py  sampler.py
src/refua/boltzgen/data/select/: protein.py  selector.py
src/refua/boltzgen/data/template/: features.py
src/refua/boltzgen/data/tokenize/: tokenizer.py
src/refua/boltzgen/data/write/: mmcif.py  pdb.py
src/refua/boltzgen/model/layers/: attention.py  confidence_utils.py  initialize.py  miniformer.py  outer_product_mean.py  pair_averaging.py  pairformer.py  transition.py  triangular.py
src/refua/boltzgen/model/loss/: bfactor.py  confidence.py  diffusion.py  distogram.py  res_type.py  validation.py
src/refua/boltzgen/model/models/: boltz.py
src/refua/boltzgen/model/modules/: affinity.py  confidence.py  diffusion.py  diffusion_conditioning.py  encoders.py  inverse_fold.py  masker.py  scatter_utils.py  transformers.py  trunk.py  utils.py
src/refua/boltzgen/model/optim/: ema.py
src/refua/boltzgen/model/validation/: design.py  rcsb.py  refolding.py  validator.py
src/refua/boltzgen/resources/: main.py
src/refua/boltzgen/task/analyze/: analyze.py  analyze_utils.py
src/refua/boltzgen/task/filter/: filter.py  seqplot_utils.py
src/refua/boltzgen/task/predict/: data_from_generated.py  data_from_yaml.py  data_ligands.py  data_protein_binder.py  loading_utils.py  predict.py  writer.py
src/refua/boltzgen/task/train/: data.py  train.py
src/refua/boltzgen/utils/: pipeline_progress_bar.py  quiet.py  resources.py
tests/: test_admet_scoring.py  test_api_smoke.py  test_boltz_kernel_fallback.py  test_kernels.py  test_protein_properties.py  test_regression.py  test_security_no_entrez.py  test_small_molecule_properties.py  test_unified_antibody.py
tests/model/layers/: test_outer_product_mean.py  test_triangle_attention.py
(+7 files in other folders)
